; ModuleID = '/home/carl/AnghaBench/tini/src/extr_tini.c_reaper_check.c'
source_filename = "/home/carl/AnghaBench/tini/src/extr_tini.c_reaper_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@reaper_warning = common dso_local global i32 0, align 4
@PR_GET_CHILD_SUBREAPER = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reaper_check() #0 {
  %1 = call i32 (...) @getpid()
  %2 = icmp eq i32 %1, 1
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %7

4:                                                ; preds = %0
  %5 = load i32, i32* @reaper_warning, align 4
  %6 = call i32 @PRINT_WARNING(i32 %5)
  br label %7

7:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @PRINT_WARNING(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
